CDCRM-851 : WS OA supprimer Document
