# tabou2-facade/src/main/java/rm/tabou2/facade/controller/tabou/operation/OperationApiController.java
@@ -249,5 +249,10 @@ public class OperationApiController extends AbstractExportDocumentApi implements
         return downloadDocument(operationService.downloadDocument(operationId, documentId));
     }
 
+    @Override
+    public ResponseEntity<Void> deleteDocument(Long operationId, String documentId) throws Exception {
+        operationService.deleteDocument(operationId, documentId);
+        return new ResponseEntity<>(HttpStatus.OK);
+    }
 
 }
